<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="50">

            <TextView
                android:id="@+id/tv_infowordrep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="46">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_englishword"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:background="@drawable/redbuttonclicked"/>
                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/speakerclicked"
                        android:id="@+id/wordlisten"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/et_infoaboutet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeatpage_infoanswer"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#d44444"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"/>

                <EditText
                    android:id="@+id/et_wordmean"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:ems="10"
                    android:background="@drawable/yellowbutton"
                    android:hint="@string/repeatpage_mean1"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/et_wordmean2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/yellowbutton"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:ems="10"
                    android:hint="@string/repeatpage_mean2"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/et_wordmean3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/yellowbutton"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:ems="10"
                    android:hint="@string/repeatpage_mean3"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/et_wordmean4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/yellowbutton"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:ems="10"
                    android:hint="@string/repeatpage_mean4"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/et_wordmean5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/yellowbutton"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:ems="10"
                    android:hint="@string/repeatpage_mean5"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_nextrep"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/repeatpage_accept"
                android:textColor="#FFF"
                android:background="@drawable/blackbuttonclicked"
                android:layout_gravity="center"
                android:layout_weight="1" />

        </LinearLayout>

    </RelativeLayout>
</merge>
