<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="50">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="17"
                android:layout_margin="20dp">
                <Button
                    android:id="@+id/btn_studynewword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yellowbuttonclicked"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/studypage_study"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="17"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/btn_studyrepeatword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yellowbuttonclicked"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/studypage_repeat"
                    android:textColor="#000"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_studydetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yellowbuttonclicked"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/studypage_details"
                    android:textStyle="bold"/>

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    ads:adSize="BANNER"
                    android:layout_marginTop="10dp"
                    ads:adUnitId="@string/banner_ad_unit_id">
                </com.google.android.gms.ads.AdView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btn_studyback"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:background="@drawable/arrowbackclicked"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</merge>
